recursion.lessons.recursion.koch.Koch.scala.error
Koch:20: error: not found: value lentgh
	avance(lentgh)	
               ^